# price-paid

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
join/: Cargo.toml
join/src/: main.rs
nginx/: Dockerfile  default.conf
prepare/: Cargo.toml
prepare/src/: main.rs
scripts/: combine.sh  join.sh  setup.sh  tile.sh
src/: main.rs  run.sh
tile/: Cargo.toml
tile/src/: main.rs
web/: .gitignore  Dockerfile  package-lock.json  package.json
web/pages/: _app.js  index.js
