[package]
name = "join"
version = "0.1.0"
authors = ["Ashton Six <me@ashtonsix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.2"
quick-xml = "0.17.2"
kdtree = "0.6.0"
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2.10"
